# another-dimension-chat

./: .gitignore  .ignore  AGENTS.md  COMPONENT_BOUNDARIES.md  CONTRIBUTING.md  CRYPTO_DECISION.md  Cargo.toml  INSTALL_FROM_SOURCE_MACOS.md  INSTALL_UNSIGNED_DMG_MACOS.md  RANDOMNESS_DECISION.md  README.ko.md  README.md  RELEASE_ARTIFACT_SIGNING_REQUIREMENTS.md  RELEASE_BINARY_INPUT_TEMPLATE.md  RELEASE_BINARY_VERIFICATION_PLAN.md  RELEASE_COMPLETION_AUDIT.md  RELEASE_DEPENDENCY_REVIEW_TEMPLATE.md  RELEASE_EXTERNAL_REVIEW_TEMPLATE.md  RELEASE_GATE_EVIDENCE_AUDIT.md  RELEASE_HARDENING.md  RELEASE_KEY_CEREMONY_REQUIREMENTS.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_FIXTURE.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_FIXTURE_AUDIT.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_INDEX.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_INDEX_CHECKSUM_FIXTURE.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_INDEX_CHECKSUM_FIXTURE_AUDIT.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_INDEX_CHECKSUM_REQUIREMENTS.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_PACKAGE_CHECKSUM_AUDIT.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_PACKAGE_CHECKSUM_GUARD_AUDIT.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_PACKAGE_CHECKSUM_NON_CLAIM_GUARD.md  RELEASE_SIGNING_CANDIDATE_EVIDENCE_RUNBOOK.md  RELEASE_SIGNING_CANDIDATE_MANIFEST_CONSISTENCY_AUDIT.md  RELEASE_SIGNING_CANDIDATE_MANIFEST_CONSISTENCY_FIXTURE.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_FIXTURE.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_FIXTURE_AUDIT.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_GUARD_AUDIT.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_GUARD_AUDIT_COVERAGE_CHECKS.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_NON_CLAIM_GUARD.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_RECORD_TEMPLATE.md  RELEASE_SIGNING_CANDIDATE_SIGNED_ARTIFACT_VERIFICATION_RECORD_TEMPLATE_COVERAGE_AUDIT.md  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli_hardening.rs
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs  status.rs
apps/engine/: Cargo.toml
apps/engine/src/: main.rs
blog/: 00-public-beta-launch.md  01-why-this-project-exists.md  02-no-central-trusted-server.md  03-rust-core-tauri-shell.md  04-pairing-envelope-storage-transport.md  05-release-discipline-verification.md  06-ai-native-development-interview-script.md  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/pairing/: Cargo.toml
crates/pairing/src/: lib.rs
crates/pairing/tests/: pairing_fixtures.rs  production_safety_material.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: arti_adapter_spike.rs  bootstrap.rs  dev_insecure.rs  endpoint_state.rs  errors.rs  hosting_phase.rs  key_material.rs  launch_descriptor.rs  lib.rs  onion.rs  pre_network.rs  runtime.rs  runtime_events.rs  runtime_preflight.rs  stream_gate.rs  stream_session.rs  tests.rs  transport_policy.rs
crates/transport/src/onion/: endpoint_state.rs  onion_stream_boundary.rs
crates/transport/src/runtime/: arti_lifecycle.rs  runtime_events.rs
docs/: DONE.md  PLAN.md
reference/: ANDROID_IMPLEMENTATION_AUTHORIZATION_SCOPE_DOWN.md  ANDROID_PUBLIC_APP_CANDIDATE.md  AUDIT_FINDING_TRACKER.md  BETA_RELEASE_CHECKLIST.md  COMPONENT_BOUNDARIES.md  CROSS_PLATFORM_TARGET_STANDARD_FINAL_CLOSURE.md  CROSS_PLATFORM_UNSIGNED_PUBLIC_BETA_PACKET.md  CRYPTO_DECISION.md  DEPENDENCY_INVENTORY.md  DEPLOYMENT_100_BLOCKER_RESOLUTION_PLAN.md  DEPLOYMENT_READINESS_GAP_REGISTER.md  EXTERNAL_AUDIT_FIELD_EVIDENCE_GATE.md  EXTERNAL_EVIDENCE_INTAKE_EXECUTION.md  EXTERNAL_REVIEW_AUDIT_READINESS.md  EXTERNAL_REVIEW_INTAKE_RUNBOOK.md  EXTERNAL_REVIEW_RELEASE_CLASS_SCOPE_DOWN.md  EXTERNAL_REVIEW_SIGNOFF_SCHEMA.md  EXTERNAL_TWO_MACHINE_EVIDENCE_SCHEMA.md  FIELD_EVIDENCE_RELEASE_CLASS_SCOPE_DOWN.md  FIELD_EVIDENCE_RELIABILITY_PROGRAM.md  FINAL_100_CLAIM_GATE.md  FINAL_100_EVIDENCE_LEDGER_SCHEMA.md  GITHUB_RELEASE_PUBLICATION_SCOPE_DOWN.md  HIGH_RISK_RUNTIME_EVIDENCE_SCHEMA.md  HIGH_RISK_THREAT_MODEL.md  INCIDENT_TABLETOP_RECORD.md  INDEPENDENT_REVIEW_PACKET.md  IOS_IMPLEMENTATION_AUTHORIZATION_SCOPE_DOWN.md  IOS_PUBLIC_APP_CANDIDATE.md  MACOS_EMERGENCY_RELEASE_INTEGRITY.md  MACOS_FIRST_RUN_RECOVERY_USABILITY_MATRIX.md  MACOS_FRESH_INSTALL_REHEARSAL.md  MACOS_FRESH_INSTALL_REHEARSAL_RESULT.md  MACOS_PRODUCTION_DISTRIBUTION_GATE.md  MACOS_PRODUCTION_UX_ONBOARDING.md  MACOS_PUBLIC_BETA_FINAL_REPORT.md  MACOS_RELEASE_CREDENTIAL_EVIDENCE_SCHEMA.md  MACOS_RELEASE_DISTRIBUTION_METADATA.md  MACOS_SIGNED_NOTARIZED_EXECUTION_PATH.md  MACOS_SIGNED_NOTARIZED_RC_ARTIFACT.md  (+53 more)
scripts/: android_implementation_authorization_scope_down_once.sh  android_public_app_candidate_once.sh  audit_finding_tracker_validator_once.sh  build_cache_env.sh  build_signed_notarized_macos_release.sh  build_speed_boundary_once.sh  clean_build_cache.sh  collect_macos_release_credential_evidence.sh  complete_phase_az_peer_intake.sh  cross_platform_public_beta_packet_once.sh  cross_platform_target_standard_final_closure_once.sh  demo_dev_cli.sh  deployment_100_blocker_resolution_once.sh  deployment_readiness_gap_reconciliation_once.sh  desktop_beta_acceptance_matrix_once.sh  desktop_default_transport_boundary_once.sh  desktop_error_recovery_copy_once.sh  desktop_lifecycle_safety_once.sh  desktop_manual_courier_envelope_recovery_once.sh  desktop_manual_flow_usability_once.sh  desktop_public_beta_source_freeze_once.sh  desktop_real_user_test_prep_once.sh  desktop_screenshot_safety_once.sh  desktop_single_machine_acceptance_once.sh  desktop_supply_chain_surface_guard_once.sh  desktop_windows_local_runtime_smoke_boundary_once.sh  desktop_windows_local_runtime_smoke_handoff_once.sh  desktop_windows_parity_intake_once.sh  desktop_windows_readiness_source_audit_once.sh  emergency_notice_manual_verification_once.sh  external_audit_field_evidence_gate_once.sh  final_100_claim_gate_once.sh  (+189 more)
(+180 files in other folders)
