[workspace]
members = [
    "crates/identity",
    "crates/pairing",
    "crates/crypto",
    "crates/protocol",
    "crates/transport",
    "crates/storage",
    "crates/core",
    "crates/mobile",
    "apps/engine",
    "apps/cli",
]
exclude = [
    "apps/desktop-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
