[package]
name = "another-dimension-engine"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
another-dimension-core = { path = "../../crates/core", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
full-runtime = ["dep:another-dimension-core"]

[lints]
workspace = true
