[package]
name = "another-dimension-crypto"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
another-dimension-protocol = { path = "../protocol" }
argon2 = { version = "0.5.3", default-features = false, features = ["alloc", "zeroize"] }
sha2 = "0.10.9"
snow = { version = "0.10.0", default-features = false, features = ["use-blake2", "use-chacha20poly1305", "use-curve25519", "use-getrandom"] }
zeroize = "1.8.2"

[features]
dev-insecure = []

[lints]
workspace = true
