[package]
name = "another-dimension-pairing"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
another-dimension-identity = { path = "../identity" }
getrandom = "0.4.2"

[dev-dependencies]
another-dimension-crypto = { path = "../crypto" }

[features]
dev-insecure = ["another-dimension-identity/dev-insecure"]

[lints]
workspace = true
