[package]
name = "another-dimension-transport"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
another-dimension-identity = { path = "../identity" }
another-dimension-protocol = { path = "../protocol" }
another-dimension-storage = { path = "../storage" }

[features]
dev-insecure = [
    "another-dimension-identity/dev-insecure",
    "another-dimension-protocol/dev-insecure",
    "another-dimension-storage/dev-insecure",
]

[lints]
workspace = true

