[package]
name = "another-dimension-transport"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
another-dimension-identity = { path = "../identity" }
another-dimension-protocol = { path = "../protocol" }
another-dimension-storage = { path = "../storage" }
arti-client = { version = "0.42.0", default-features = false, optional = true }

[features]
arti-adapter-spike = [
    "dep:arti-client",
    "arti-client/tokio",
    "arti-client/rustls",
    "arti-client/onion-service-client",
    "arti-client/onion-service-service",
    "arti-client/keymgr",
]
dev-insecure = [
    "another-dimension-identity/dev-insecure",
    "another-dimension-protocol/dev-insecure",
    "another-dimension-storage/dev-insecure",
]

[lints]
workspace = true
