[package]
name = "another-dimension-desktop-tauri"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "another_dimension_desktop_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
another-dimension-core = { path = "../../../crates/core" }
another-dimension-identity = { path = "../../../crates/identity" }
another-dimension-storage = { path = "../../../crates/storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[lints.rust]
unsafe_code = "forbid"
